[gd_scene load_steps=7 format=3 uid="uid://bcvecwlt7got3"]

[ext_resource type="Script" uid="uid://cfssgkof15fyn" path="res://worlds/intro_scene.gd" id="1_8plbg"]
[ext_resource type="Theme" uid="uid://83fotgcxjcty" path="res://worlds/title/menu_button.tres" id="1_bx4cs"]
[ext_resource type="Texture2D" uid="uid://j3kkh35qcp8u" path="res://sprites/introemail.png" id="1_ukmh3"]
[ext_resource type="Script" uid="uid://ca7af382gv5a" path="res://worlds/continue.gd" id="4_bx4cs"]
[ext_resource type="PackedScene" uid="uid://bpq4mik0kteh0" path="res://scenes/black_to_fade.tscn" id="4_vntja"]
[ext_resource type="Script" uid="uid://b87enckblgk28" path="res://components/fader.gd" id="5_tplf6"]

[node name="IntroScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_bx4cs")
script = ExtResource("1_8plbg")

[node name="Introemail" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_ukmh3")

[node name="StartGameTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true
autostart = true

[node name="Continue" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -133.0
offset_top = -77.0
offset_right = 120.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"
script = ExtResource("4_bx4cs")

[node name="Fader" type="Node" parent="Continue"]
script = ExtResource("5_tplf6")
metadata/_custom_type_script = "uid://b87enckblgk28"

[node name="BlackToFade" parent="." instance=ExtResource("4_vntja")]
layout_mode = 1
mouse_filter = 2

[node name="FadeInTimer" type="Timer" parent="."]

[connection signal="timeout" from="StartGameTimer" to="." method="_on_start_game_timer_timeout"]
[connection signal="pressed" from="Continue" to="." method="_on_continue_pressed"]
[connection signal="timeout" from="FadeInTimer" to="." method="_on_fade_in_timer_timeout"]
